[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menus/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://assets/texture_01.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Beto_dynamicfont.tres" type="DynamicFont" id=3]

[node name="TextureButton" type="TextureButton"]
margin_top = 135.0
margin_right = 1024.0
margin_bottom = 165.0
rect_min_size = Vector2( 0, 50 )
focus_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "TEXT BUTTON"
arrow_margin_from_center = 213

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 21.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[center] TEXT BUTTON [/center]"
text = " TEXT BUTTON "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_img" type="Sprite" parent="."]
position = Vector2( 299, 16.6667 )
scale = Vector2( 0.0234532, 0.0234532 )
texture = ExtResource( 2 )

[node name="right_img" type="Sprite" parent="."]
position = Vector2( 725, 16.6667 )
rotation = 3.14159
scale = Vector2( 0.0234532, 0.0234532 )
texture = ExtResource( 2 )
[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
